--- a/root/css/style.css
+++ b/root/css/style.css
@@ -55,7 +55,7 @@ article {
 section {
 	padding: 1.5em 1.8em;
 	border-top: solid 3.5px;
-	margin: 2em 0;
+	margin: 15px 0;
 	background-color: #fff;
 	border-radius: 8px;
 	
