--- a/root/css/style.css
+++ b/root/css/style.css
@@ -90,10 +90,10 @@ img {
 		padding-bottom: 65px;
 	}
 	
-	h1:last-of-type {margin-bottom: 0px;}
+	h1:last-of-type {margin-bottom: 15px;}
 	h1, h1:first-of-type {
 		font-size: 36px;
-		margin-bottom: -10px;
+/* 		margin-bottom: -10px; */
 	}
 
 	
