--- a/root/css/style.css
+++ b/root/css/style.css
@@ -40,7 +40,7 @@ article {
 	text-align: center;
 	margin: 0 auto;
 	max-width: 311px;
-	padding-top: 70px;
+	padding: 70px 0 55px;
 }
 
 .cardSection {
